# fractal-generator

./: Cargo.toml  README.md
src/: colour.rs  main.rs  options.rs
