[package]
name = "fractal-generator"
version = "0.1.0"
authors = ["Matt Bond <matt.v.bond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.7.3"
num = "0.3.1"
clap = "3.0.0-beta.2"
